--- a/package.json
+++ b/package.json
@@ -2,15 +2,23 @@
   "name": "solparts",
   "version": "0.0.0",
   "private": true,
+  "type":"module", 
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "mocha",
+    "test:watch": "mocha --watch",
+    "testInicial": "echo \"Running initial tests...\" && mocha"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "pug": "^3.0.3"
+  },
+  "devDependencies": {
+    "chai": "^5.1.2",
+    "mocha": "^11.0.1"
   }
 }
