--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "solparts",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
-  "type":"module", 
+  "type": "module",
   "scripts": {
     "start": "node ./bin/www",
     "test": "mocha",
@@ -20,5 +20,10 @@
   "devDependencies": {
     "chai": "^5.1.2",
     "mocha": "^11.0.1"
-  }
+  },
+  "description": "Sistema Administrativo y Contable",
+  "main": "index.js",
+  "repository": "https://github.com/daab/solparts.git",
+  "author": "Domingo <domingo.aab@gmail.com>",
+  "license": "MIT"
 }
